tests/negative/semantic/array_set_bool_into_string/input.ci
void main() {
    string[] xs = ["a"];
    arraySet(xs, 0, true);
}
